# Fall-2021

2D Array Project/: functions.cpp  main.cpp
Advanced_Book_Class/: Advanced_Book_Class.vcxproj  Advanced_Book_Class.vcxproj.filters  book.cpp  book.h  main.cpp
Advanced_Book_Class/Debug/: Advanced_Book_Class.exe.recipe  Advanced_Book_Class.ilk  Advanced_Book_Class.vcxproj.FileListAbsolute.txt  vc142.idb
Basic_Book_Class/: book.cpp  main.cpp
Basic_Book_Class/Debug/: Basic_Book_Class.exe.recipe  Basic_Book_Class.ilk  Basic_Book_Class.vcxproj.FileListAbsolute.txt  vc142.idb
CIS-240/2D Array Project/: functions.cpp
CIS-240/Advanced_Book_Class/: Advanced_Book_Class.sln  book.cpp  book.h  main.cpp
CIS-240/Basic_Book_Class/: Basic_Book_Class.sln  book.cpp  (+2 more)
CSI240-Module06-Lab04/: CSI240-Module06-Lab04.vcxproj
Module-06-Activity-1-Operator Overloading/: Main.cpp  Module-06-Activity-1-Operator Overloading.sln
Module-07-LabAssignment6-LinkedLists/: Book.cpp  Book.h  LList.h  LListNode.cpp  LListNode.h  Module-07-LabAssignment6-LinkedLists.sln
Module-08-Lab-07/: Module-08-Lab-07.vcxproj
Module-10-Activity-01/: Module-10-Activity-01.cpp  Module-10-Activity-01.vcxproj
Module-11-Project-01/: CMakeLists.txt  Module-11-Project-01.sln  Module-11-Project-01.vcxproj  accounts.cpp  main.cpp  ui.cpp
Module-11-Project-01/Debug/: Module-11-Project-01.exe.recipe  accounts.obj.enc  vc142.idb
Module-11-Project-01/Debug/Module-1.2814c089.tlog/: CL.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Struct Project/: CMakeLists.txt  programmer.cpp
(+119 files in other folders)
